--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
 
     implementation 'com.github.barteksc:android-pdf-viewer:3.2.0-beta.1'
+    implementation 'com.karumi:dexter:6.0.0'
 //    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation "androidx.tonyodev.fetch2:xfetch2:3.1.4"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1"
